# ft_multilayer_perceptron

./: .gitignore  lint.sh  pyproject.toml  requirements.txt
src/: dataset.py  inspect_dataset.py  main.mojo  network.py  prediction.py  split_dataset.py  train.py
src/mypackage/: __init__.mojo  mymodule.mojo
src/split/: __init__.py  split_dataset.py
test/: test_network.py
