[tool.poetry]
name = "multilayer-perceptron"
version = "0.1.0"
description = ""
authors = ["rutger <rutgercappendijk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pylama = "^8.4.1"
setuptools = "^72.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
