[tool.poetry]
name = "multilayer-perceptron"
version = "0.1.0"
description = ""
authors = ["rutger <rutgercappendijk@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
pandas-stubs = "^2.2.2.240805"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pylama = "^8.4.1"
setuptools = "^72.1.0"
pytest = "^8.3.2"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
